--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js"
+    "dev": " node ./src/server.js"
   },
   "keywords": [
     "node.js"
@@ -13,7 +13,11 @@
   "author": "Hỏi Dan it",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
