kết nối database

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PORT = 8081 
 HOST_NAME =localhost
+
+#  kết nối dữ liệu end khai báo
+DB_HOST = localhost
+DB_PORT=3307
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=hoidanit
